# restuarant_competitor_analysis_sandbox

./: .gitignore  README.md  pyproject.toml  requirements-cuda.txt  requirements-dev.txt  requirements.txt  setup.sh
agents/: __init__.py
configs/: __init__.py  model_registry.yaml  settings.yaml
eval/: __init__.py
notebooks/: 00_phase0_vram_profile.py  NB01_data_acquisition.ipynb  NB01b_lancedb_init.ipynb  NB01c_three_cuisine_acquisition_and_rebuild.ipynb  NB02_eda_restaurants.ipynb  NB02b_eda_reviews.ipynb  NB02c_eda_menus.ipynb  NB02d_eda_nypl_historical.ipynb  NB02e_retrieval_and_three_way_eda.ipynb  NB02f_american_menu_photo_inventory.ipynb  NB03b_qwen_menu_understanding.ipynb  NB03c_vjepa_embeddings.ipynb  NB03d_multimodal_alignment.ipynb  NB04_competitor_minibriefs.ipynb  SBV2_00_environment_and_register.ipynb  SBV2_01_data_download_and_manifest.ipynb  SBV2_03_document_dataset_loading.ipynb  SBV2_04_ocr_baseline.ipynb  SBV2_05_local_vlm_extraction.ipynb  SBV2_06_schema_normalisation.ipynb  SBV2_07_extraction_metrics.ipynb  SBV2_08_readiness_scoring.ipynb  SBV2_09_composite_render_proof.ipynb
utils/: __init__.py
